--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,14 @@
 .vscode/
 *.h5
 *.ffs_db
-
+*.png
+**/NISE_2017/
+**/NISE_Tutorials/
+**/pyheom_source/
+pyheom_source/
+benchmark_workdir/
+*.out
+nise_N4_verification/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
