--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ pyheom_source/
 benchmark_workdir/
 *.out
 nise_N4_verification/
+papers/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
